--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">VolaitApp</string>
+    <string name="cadastro">Já possui cadastro? Faça login</string>
+
+    <!--GeoLoc-->
+    <string name="editar">Editar</string>
+    <string name="endereco">"Endereço: %1$s  \n \n Horário: %4$tr"</string>
+    <string name="loading">Carregando…</string>
+    <string name="parar_busca">PARAR BUSCA</string>
+    <string name="iniciar_busca">INICIAR</string>
+    <string name="permissao_recusada">Permissão negada, autorize a aplicação </string>
+    <string name="sem_localizacao">Localização Indisponível</string>
+    <string name="hint_busca">Clique para iniciar a busca</string>
+    <string name="sem_endereco">Endereço indisponível</string>
+    <string name="coordenada_invalida">Coordenadas inválidas</string>
+    <string name="servico_indisponivel">Esse serviço está indisponível</string>
 </resources>
