--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,10 @@
     <string name="textC1">O cumpom será automaticamente validado ao ser realizado a compra da passagem. Após gerado, faça seu carrinho em nosso site www.volait.com.br e utilize o cupom na tela de pagamento das passagens selecionadas.</string>
     <string name="textC2">Cupom disponível no app para emissão até:</string>
     <string name="textC3">Cada cupom só poderá ser utilizado uma vez, e poderá ser encerrado antecipadamente caso o estoque de Cupons se esgote antés do término previsto neste regulamento.</string>
+    <string name="textPrivacity">       Na Volait Empresa Aérea, privacidade e segurança são prioridades e nos comprometemos com a transparência do tratamento de dados pessoais dos nossos usuários/clientes. Por isso esta presente Política de Privacidade estabelece como é feita a coleta, uso e transferência de informações de clientes ou outras pessoas que acessam ou usam nosso site.
 
+    Ao utilizar nossos serviços, você entende que coletaremos e usaremos suas informações pessoais nas formas descritas nesta Política, sob as normas da Constituição Federal de 1988 (art. 5º, LXXIX; e o art. 22º, XXX – incluídos pela EC 115/2022), das normas de Proteção de Dados (LGPD, Lei Federal 13.709/2018), das disposições consumeristas da Lei Federal 8078/1990 e as demais normas do ordenamento jurídico brasileiro aplicáveis.
+
+   Dessa forma, a Volait Empresa Aérea, doravante denominada simplesmente como Volait Fly, inscrita no CNPJ/MF sob o nº , no papel de Controladora de Dados, obriga-se ao disposto na presente Política de Privacidade.
+</string>
 </resources>
