--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
 
    Dessa forma, a Volait Empresa Aérea, doravante denominada simplesmente como Volait Fly, inscrita no CNPJ/MF sob o nº , no papel de Controladora de Dados, obriga-se ao disposto na presente Política de Privacidade.
 </string>
+    <string name="TextMyCupons"> Use correndo os seus cupons e aproveite as promoções em nosso site! Se atente as datas de validade para não perder nenhum deles </string>
 </resources>
